# idm-rust

./: Cargo.toml  README.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AddModal.tsx  DownloadList.tsx  DownloadRow.tsx
src/: downloader.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
