[package]
name = "idm-rust"
version = "0.1.0"
edition = "2021"
description = "A multi-threaded file downloader using Tokio and Reqwest"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
thiserror = "2"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
