[package]
name = "idm-rust-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop frontend for the IDM Rust multi-threaded downloader"

[dependencies]
idm-rust = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
